cmake_minimum_required(VERSION 2.8)

project(libfaster)

add_definitions(-O0)
add_definitions(-ggdb)
add_definitions(-g3)

set (libfaster_VERSION_MAJOR 0)
set (libfaster_VERSION_MINOR 1)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pg  -std=c++11 -Wall -Wextra")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg  -std=c++11 -Wall -Wextra")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

find_package(OpenMP)
if(OPENMP_FOUND)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif(OPENMP_FOUND)

find_package(MPI REQUIRED)
#set (MPI_CXX_COMPILER "mpicc")
add_definitions(${MPI_CXX_COMPILE_FLAGS})
include_directories(${MPI_CXX_INCLUDE_PATH})
link_directories(${MPI_CXX_LIBRARIES})
#set(CMAKE_CXX_COMPILE_FLAGS ${CMAKE_CXX_COMPILE_FLAGS} ${MPI_COMPILE_FLAGS})
#set(CMAKE_CXX_LINK_FLAGS ${CMAKE_CXX_LINK_FLAGS} ${MPI_LINK_FLAGS})
#include_directories("/usr/include/openmpi/")
set (EXTRA_LIBS ${EXTRA_LIBS} ${MPI_CXX_LIBRARIES})

set (EXTRA_LIBS ${EXTRA_LIBS} efence)

set (MODULES ${MODULES} fdd.cpp )
#set (MODULES ${MODULES} indexedFdd.cpp)
set (MODULES ${MODULES} fastContext.cpp )
set (MODULES ${MODULES} fastComm.cpp )
set (MODULES ${MODULES} fastCommBuffer.cpp )
set (MODULES ${MODULES} misc.cpp )
set (MODULES ${MODULES} worker.cpp )
set (MODULES ${MODULES} workerRun.cpp )
set (MODULES ${MODULES} workerCreate.cpp )
set (MODULES ${MODULES} workerICreate.cpp )
set (MODULES ${MODULES} workerFddBase.cpp )
set (MODULES ${MODULES} workerFdd0.cpp )
set (MODULES ${MODULES} workerFdd1.cpp )
set (MODULES ${MODULES} workerPFdd.cpp )
set (MODULES ${MODULES} workerPFdd.cpp )
set (MODULES ${MODULES} fddStorage.cpp )
set (MODULES ${MODULES} indexedFddStorage.cpp )
set (MODULES ${MODULES} workerFddCore.cpp )
set (MODULES ${MODULES} workerIFdd.cpp )
set (MODULES ${MODULES} workerIPFdd.cpp )
set (MODULES ${MODULES} workerIFddCore.cpp )
set (MODULES ${MODULES} workerIFddInstance0.cpp )
set (MODULES ${MODULES} workerIFddInstance1.cpp )
set (MODULES ${MODULES} workerIFddInstance2.cpp )
set (MODULES ${MODULES} workerIFddInstance3.cpp )
set (MODULES ${MODULES} workerIFddInstance4.cpp )
set (MODULES ${MODULES} workerIFddInstance5.cpp )
set (MODULES ${MODULES} workerIFddInstance5.cpp )
set (MODULES ${MODULES} workerIFddInstance6.cpp )
set (MODULES ${MODULES} workerIFddInstance7.cpp )
set (MODULES ${MODULES} workerIFddInstance8.cpp )
set (MODULES ${MODULES} workerIFddInstance9.cpp )
set (MODULES ${MODULES} workerIFddInstance10.cpp )
set (MODULES ${MODULES} workerIFddInstance11.cpp )
set (MODULES ${MODULES} workerIPFddInstance0.cpp )
set (MODULES ${MODULES} workerIPFddInstance1.cpp )
set (MODULES ${MODULES} workerIPFddInstance2.cpp )
set (MODULES ${MODULES} workerIPFddInstance3.cpp )
set (MODULES ${MODULES} workerIPFddInstance4.cpp )
set (MODULES ${MODULES} workerIPFddInstance5.cpp )

set (HEADERS ${HEADERS} ../include/definitions.h  )
set (HEADERS ${HEADERS} ../include/fastComm.h  )
set (HEADERS ${HEADERS} ../include/fastCommBuffer.h)
set (HEADERS ${HEADERS} ../include/fastContext.h  )
set (HEADERS ${HEADERS} ../include/fastTask.h  )
set (HEADERS ${HEADERS} ../include/fdd.h  )
set (HEADERS ${HEADERS} ../include/fddBase.h  )
set (HEADERS ${HEADERS} ../include/fddStorage.h  )
set (HEADERS ${HEADERS} ../include/fddStorageBase.h  )
set (HEADERS ${HEADERS} ../include/indexedFdd.h  )
set (HEADERS ${HEADERS} ../include/indexedFddStorage.h  )
set (HEADERS ${HEADERS} ../include/libfaster.h  )
set (HEADERS ${HEADERS} ../include/misc.h  )
set (HEADERS ${HEADERS} ../include/worker.h  )
set (HEADERS ${HEADERS} ../include/workerFddBase.h  )
set (HEADERS ${HEADERS} ../include/workerFdd.h  )
set (HEADERS ${HEADERS} ../include/workerIFdd.h)


add_library(libfaster SHARED ${MODULES})
target_link_libraries (libfaster  ${EXTRA_LIBS})

#install(TARGETS libfaster DESTINATION lib)
#install(FILES ${HEADERS} DESTINATION include)
